Bug 143769 - Calc crashes if a background for a sketch is selected
Summary: Calc crashes if a background for a sketch is selected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.6.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.1 target:7.1.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-08-07 12:15 UTC by Sandro S.
Modified: 2021-08-11 13:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["SvxFillToolBoxControl::SelectFillTypeHdl(weld::ComboBox%20&)"]
Regression By:


Attachments
Screenshot to see steps for crash (29.95 KB, image/png)
2021-08-07 12:16 UTC, Sandro S.
Details
Test Case (9.24 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-08-07 12:16 UTC, Sandro S.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sandro S. 2021-08-07 12:15:13 UTC
Description:
I creeated a simple sketch in Drawing and copied into Calc.
The background of the sketch is by default transparent and I wanted to change it from Background "none" to "color" via the toolbox menu leading to Calc crashing.

Steps to Reproduce:
1. Open attached Calc file
2. Select the sketch (e.g. by clicking on "a")
3. The toolbar for drawing properties opens (might be called differently in English)
4. Click on the area style which shows "none" to open the dropdown menu
5. Click on "color", which leads to an immediate crash

Actual Results:
Crash.

Expected Results:
Fill the background of drawing with standard Color


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.6.2 (x64)
Build ID: 144abb84a525d8e30c9dbbefa69cbbf2d8d4ae3b
CPU threads: 12; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 1 Sandro S. 2021-08-07 12:16:01 UTC
Created attachment 174127 [details]
Screenshot to see steps for crash
Comment 2 Sandro S. 2021-08-07 12:16:18 UTC
Created attachment 174128 [details]
Test Case
Comment 3 raal 2021-08-07 15:44:18 UTC
Confirm crash with Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 36efb384a66b6dd645e0ae80fd7df68370a9dc8b
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Works OK in Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a) -> regression
Comment 4 raal 2021-08-07 16:04:29 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
bibisect-50max: 13b8d1d00e92b0cf8194496919c241d78b4561e7 is the first bad commit
commit 13b8d1d00e92b0cf8194496919c241d78b4561e7
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Wed May 27 22:40:54 2015 +0800

    source-hash-8caebf50b3ee159da4db500f969427b49f07af80
    
    commit 8caebf50b3ee159da4db500f969427b49f07af80
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Fri May 1 17:15:31 2015 +0100
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Tue May 5 17:21:58 2015 +0100
    
        Use new color selector in the toolbar for area fills
Comment 5 Commit Notification 2021-08-11 08:00:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0c4cdfa9c9ba9548a61c7314858eae01f90f2782

tdf#143769 don't crash on null XFillColorItem

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2021-08-11 08:14:43 UTC
fixed in trunk, backports to 7-2 and 7-1 in gerrit
Comment 7 Commit Notification 2021-08-11 13:17:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/2a01c0b7a621a4f2bb6b25c0ef45897c0124c370

tdf#143769 don't crash on null XFillColorItem

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2021-08-11 13:17:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/b79925cb839093aa11e21e618318bd23630d0b65

tdf#143769 don't crash on null XFillColorItem

It will be available in 7.1.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.