tdf#143769 don't crash on null XFillColorItem

use same solution as:

commit 5ee0e6ab93ad791f5e79506efafd16cb7364ffb1
Author: Markus Mohrhard <markus.mohrhard@googlemail.com>
Date:   Tue Jul 21 19:01:26 2015 +0200

    avoid crash with color listbox for now

    Change-Id: I36ac6513546961ec8d8d1e9437a8ef88574acbf4

Change-Id: I46c55461e5867431a6e9c838b5ef462f9581eb28